Improve MCP spec compliance and request handling